# Aegis-Program-Kali

./: .env.example  .gitignore  README.md  pyproject.toml
config/: agents.yaml
src/aegis/: main.py
src/aegis/agents/: agent_manager.py  base.py
src/aegis/core/: orchestrator.py
src/aegis/hardware/: manager.py  models.py
src/aegis/hardware/monitors/: intel_monitor.py  nvidia_monitor.py  system_monitor.py
src/aegis/utils/: logger.py
